<resources>
    <string name="app_name">Tu app</string>
    <string name="viewName">Nombre</string>
    <string name="viewPass">Contraseña</string>
    <string name="viewLast">Apellido</string>
    <string name="submit">Home</string>
    <string name="title">Bienvenido</string>textButton2
    <string name="textButton2">Regresar</string>
    <string name="saludo">Bienvenido</string>

    <string name="imageavatar">imagenavatar</string>

    <string name="titleList"> Gallery </string>
    <string name="item1"> Naruto</string>
    <string name="item2"> Uzumaki </string>
    <string name="item3"> One Piece</string>

    <string name="btnText">Ver detalles</string>

    <string name="imgdesc">is a photo</string>

</resources>